# ros-allegro

./: .gitignore  README.md  build_catkin.sh  build_conda.sh  recipe.yaml  vinca.yaml
ros-allegro/allegro_hand_controllers/: CMakeLists.txt  allegro_node_params.yaml  feedforward_test.py  freeze_joint.py  go_home.py  iter_joints_sine.py  package.xml
ros-allegro/allegro_hand_controllers/allegro_hand_controllers/: allegro_robot.py
ros-allegro/allegro_hand_controllers/python/: freeze_joint.py  iter_joints_sine.py
ros-allegro/allegro_hand_controllers/src/: allegro_node.cpp  allegro_node.h  allegro_node_pd.cpp  allegro_node_pd.h  allegro_node_pd_feedforward.cpp  allegro_node_pd_feedforward.h
ros-allegro/allegro_hand_driver/: CMakeLists.txt  package.xml
ros-allegro/allegro_hand_driver/include/allegro_hand_driver/: AllegroHandDrv.h
ros-allegro/allegro_hand_driver/src/: AllegroHandDrv.cpp
ros-allegro/allegro_hand_driver/src/candrv/: socket_can.cpp
ros-allegro/bhand/: CMakeLists.txt
