<?xml version="1.0"?>
<package format="2">
    <name>allegro_hand_controllers</name>
    <version>0.0.0</version>
    <description>The allegro_hand_controllers package</description>

    <maintainer email="felixd@todo.todo">felixd</maintainer>

    <license>BSD</license>

    <!-- dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>allegro_hand_driver</depend>
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <!-- <run_depend>allegro_hand_description</run_depend> -->
    <!-- <run_depend>allegro_hand_parameters</run_depend> -->

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
