<?xml version="1.0"?>
<package format="2">
  <name>allegro_hand_driver</name>
  <version>2.0.1</version>
  <description>
    ROS stack for SimLab's Allegro Hand.
  </description>

  <maintainer email="seanyi@wonikrobotics.com">Sean Yi</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/AllegroHandStack</url>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <!--exec_depend>libpcan</exec_depend-->
  <exec_depend>std_msgs</exec_depend>
  <!--exec_depend>message_exectime</exec_depend-->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
